src/objects/Customer_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>R00N70000002H6uVEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_or_Suggestions__c</fullName>
        <label>Comments or Suggestions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>R00N70000002H6uLEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Service__c</fullName>
        <label>Customer Service</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral From Current Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Result__c</fullName>
        <label>Initial Contact Result</label>
        <picklist>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Contact__c</fullName>
        <label>Initial Contact</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>R00N70000002FrsQEAS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <label>Overall Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Results__c</fullName>
        <label>Overall Results</label>
        <picklist>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Presentation_Result__c</fullName>
        <label>Product Presentation Result</label>
        <picklist>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Presentation__c</fullName>
        <label>Product Presentation</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <inlineHelpText>Date merchant submitted the survey.</inlineHelpText>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salesperson_Name__c</fullName>
        <label>Salesperson Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <inlineHelpText>Date survey was sent to merchant.</inlineHelpText>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_Up_Results__c</fullName>
        <label>Set Up Results</label>
        <picklist>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Set_Up__c</fullName>
        <label>Set Up</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyID__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>SurveyID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <description>Survey results</description>
        <label>Survey URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Was_a_referral_submitted__c</fullName>
        <description>Did this merchant submit a referral for us to call?</description>
        <label>Was a referral submitted?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_you_recommend_us__c</fullName>
        <label>Will you recommend us?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Survey</label>
    <listViews>
        <fullName>All_Surveys</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>Salesperson_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>Was_a_referral_submitted__c</columns>
        <columns>Survey_URL__c</columns>
        <columns>Comments_or_Suggestions__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Sent_Date__c</columns>
        <columns>Response_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Surveys</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_Responses</fullName>
        <columns>SurveyID__c</columns>
        <columns>NAME</columns>
        <columns>Salesperson_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>How_did_you_hear_about_us__c</columns>
        <columns>Initial_Contact__c</columns>
        <columns>Product_Presentation__c</columns>
        <columns>Customer_Service__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>Will_you_recommend_us__c</columns>
        <columns>Comments_or_Suggestions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Response_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month Responses</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Merchant_Spotlight_Surveys</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Salesperson_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>Comments_or_Suggestions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Overall_Rating__c</field>
            <operation>equals</operation>
            <value>Excellent</value>
        </filters>
        <label>Merchant Spotlight Surveys</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todays_Surveys</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Salesperson_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Contact__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>Survey_URL__c</columns>
        <columns>Comments_or_Suggestions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Response_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Surveys</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Customer Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>